# rust_tide_todo

./: .gitignore  .sample.env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
controllers/: Cargo.toml
controllers/src/: hello_controller.rs  lib.rs  projects_controller.rs
models/: Cargo.toml
models/src/: lib.rs  routing.rs
models/src/db/: projects.rs
shared/: Cargo.toml
shared/src/: config.rs  db.rs
src/: main.rs
