[package]
name = "todo_tide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femme = "2.2.1"
tide = "0.16.0"

async-std = { version = "1.12.0", features = ["attributes", "tokio1"]}
serde = { version = "1.0.183", features = ["derive"] }

controllers = { path = "./controllers"}
models = { path = "./models" }
